--- a/Cargo.toml
+++ b/Cargo.toml
@@ -17,6 +17,8 @@ exclude = ["/.travis.yml", "/.coveralls.yml", "/format"]
 
 [dev-dependencies]
 quickcheck = "0.8.0"
+core_io = { version = "0.1.20210325", optional = true }
 
 [features]
 nightly = []
+std = []
